--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@
   border: none;
 }
 
+.black-btn {
+  padding: 15px;
+  font-size: 20px;
+  width: 100px;
+  background-color: #000;
+  border-radius: 15px;
+  margin-right: 30px;
+  cursor: pointer;
+  border: none;
+}
+
 /* top bar section */
 .header {
   position: fixed;
