--- a/style.css
+++ b/style.css
@@ -8,9 +8,12 @@
   font-style: normal;
   font-variation-settings:
     "MORF" 0,
-    "SHLN" 0;
+    "SHLN" 10;
+  font-size: 100%;
+  font-weight: 300;
+  color: white;
+  
 }
-
 
 /*tools*/
 .blue-btn {
@@ -32,6 +35,7 @@
   cursor: pointer;
   border: none;
 }
+
 
 /* top bar section */
 .header {
@@ -116,6 +120,33 @@ nav {
 }
 
 
+
+.MainSection .who_me {
+  height: 100vh;
+  background-color: black;
+}
+
+.MainSection .who_me .text_section {
+  text-align: center;
+  position: absolute;
+  font-size: 25px;
+  left: 50%; 
+  top: 50%; 
+  transform: translate(-50%, -50%); 
+}
+
+.MainSection .who_me .button_section{
+  position: absolute;
+  font-size: 50px;
+  left: 50%; 
+  top: 70%; 
+  transform: translate(-50%, -50%); 
+}
+
+
+
+
+
 .MainSection .contact {
   display: none;
   height: 100vh;
@@ -144,40 +175,94 @@ nav {
 .MainSection .skills {
   display: none;
   height: 100vh;
-  background-color: black;
-  transition: width 2s;
+  width: 100%;
+  background-color: #000;
+
 }
 
-.MainSection .skills .text_section {
-  text-align: center;
-  position: absolute;
-  font-size: 30px;
+
+
+.MainSection .skills .skills_section {
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center;
+  width: 70vw;
+  height: 50vh;
+  position: relative;
+  border-radius: 30px;
+  border: 10px solid blue;
   left: 50%; 
   top: 50%; 
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
+  background-color: #000; 
 }
 
-.MainSection .skills .image_section{
-  width: 100vw;
-  height:100vh;
-  border-radius: 30px;
+.MainSection .skills .skills_section .subtitle {
   position: absolute;
-  font-size: 50px;
-  left: 50%; 
-  top: 45%; 
-  transform: translate(-50%, -50%); 
-}
-.MainSection .skills .image_section img{
+  display: flex;
+  justify-content: space-around;
+  font-size: 20px;
+  top: 0;
+  border-radius: 30px;
   width: 100%;
-  height: 100%;
-
+  text-align: center;
+  background-color: blue;
+  padding: 10px;
+  color: white;
 }
+
+.MainSection .skills .skills_section .blocks {
+  display: flex;
+  flex-direction: row; 
+  align-items: flex-end; 
+  justify-content: space-around;
+  width: 100%;
+  height: calc(100% - 40px); 
+}
+
+.MainSection .skills .skills_section .blocks #block1 {
+  width: 60px; 
+  background-color: blue;
+  height: 60%;
+  border-radius: 5px;
+  margin: 0 5px;
+}
+
+.MainSection .skills .skills_section .blocks #block2 {
+  width: 60px; 
+  background-color: blue;
+  height: 10%;
+  border-radius: 5px;
+  margin: 0 5px; 
+}
+
+
+
+.MainSection .skills .skills_section .blocks #block3 {
+  width: 60px; 
+  background-color: blue;
+  height: 10%;
+  border-radius: 5px;
+  margin: 0 5px; 
+}
+
+
+
+.MainSection .skills .skills_section .blocks #block4{
+  width: 60px; 
+  background-color: blue;
+  height: 5%;
+  border-radius: 5px;
+  margin: 0 5px; 
+}
+
 
 .MainSection .skills .button_section{
   position: absolute;
-  font-size: 50px;
+  font-size: 30px;
   left: 50%; 
-  top: 50%; 
+  top: 83%; 
   transform: translate(-50%, -50%); 
 }
 
@@ -188,7 +273,7 @@ nav {
   background-color: blue;
   width: 100%;
   height: 10vh;
-  position: fixed;
+  position: absolute;
   bottom: 0;
 }
 
@@ -209,7 +294,7 @@ nav {
   .menu {
     flex-direction: column;
     background-color: blue;
-    align-items: center;
+    align-items:center;
     position: absolute;
     top: 85px;
     left: 0;
