--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ nav {
   width: 70vw;
   height: 50vh;
   position: relative;
-  border-radius: 30px;
   border: 10px solid blue;
   left: 50%; 
   top: 50%; 
@@ -266,6 +265,10 @@ nav {
   transform: translate(-50%, -50%); 
 }
 
+
+.MainSection .skills .button_section .blue-btn{
+  font-size: 20px;
+}
 
 
 /* BottomBar */
